--- a/Development roadmap.tex
+++ b/Development roadmap.tex
@@ -19,6 +19,7 @@
 \usepackage{tikz-cd}
 \usepackage{framed}
 \usepackage{mdframed}
+\usepackage{ulem}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
@@ -75,9 +76,12 @@
 \section{To do list}
 
 \begin{itemize}
-	\item I think we need to implement our own class for root systems. The built-in Sympy class is nice for some things, but doesn't store roots in the way that I would like. For example, with 4x4 special orthogonal group with Witt index 2, the root system is type $B_2$. The built-in Sympy root system class represents this root system as four vectors of length 2. But I would prefer to represent it as four vectors of length 4, with some zeros padded onto the ends.
+	\item \sout{I think we need to implement our own class for root systems. The built-in Sympy class is nice for some things, but doesn't store roots in the way that I would like. For example, with 4x4 special orthogonal group with Witt index 2, the root system is type $B_2$. The built-in Sympy root system class represents this root system as four vectors of length 2. But I would prefer to represent it as four vectors of length 4, with some zeros padded onto the ends.}
+	\begin{itemize}
+		\item \sout{Transfer rootlinearcombos stuff to root system class}
+	\end{itemize}
 
-	Even ignoring the small stuff, eventually we'll need non-reduced root systems for special unitary groups, which the built-in class definitely doesn't handle.
+	\sout{Even ignoring the small stuff, eventually we'll need non-reduced root systems for special unitary groups, which the built-in class definitely doesn't handle.}
 
 	\item nondegenerate\_isotropic\_form
 	\begin{itemize}
