Starting special unitary groups
Built is_lie_algebra_element_SU, is_group_element_SU,root_space_dimension_SU, and torus_element_SU

--- a/Development roadmap.tex
+++ b/Development roadmap.tex
@@ -82,9 +82,21 @@
 
 	\item Complete group builder functions for special unitary groups.
 	\begin{itemize}
-		\item Write various internal methods for build\_special\_unitary\_group, from 
+		\item Write various internal methods for build\_special\_unitary\_group
 
-		is\_lie\_algebra\_element\_SU down to torus\_element\_map\_SU
+		\sout{is\_lie\_algebra\_element\_SU}
+		
+		\sout{is\_group\_element\_SU}
+		
+		\sout{is\_torus\_element\_SU}
+		
+		\sout{root\_space\_dimension\_SU}
+		
+		root\_space\_map\_SU
+		
+		root\_subgroup\_map\_SU
+		
+		\sout{torus\_element\_map\_SU}
 
 		\item Work out commutator coefficients for special unitary groups, 
 
