Commutator coefficient calculator

--- a/Development roadmap.tex
+++ b/Development roadmap.tex
@@ -152,7 +152,7 @@ and write weyl\_group\_coefficient\_map\_SO
 	\item Implement a custom root system class (still lacks type D, E, F, G).
 	\item Implement something to automatically calculate and output roots and root spaces for special linear, special orthogonal, and special unitary groups.
 	\item Create a custom class to represent pinned groups and run tests to verify pinning properties.
-	\item Create a group builder method for special linaer groups.
+	\item Create a group builder method for special linear groups.
 \end{itemize}
 
 \newpage
