--- a/Mathematical results.tex
+++ b/Mathematical results.tex
@@ -279,7 +279,7 @@ is a ring isomorphism.
 %	f(uv) &= e_\gamma( \ov{uv}) = \mu_\rho \Big( e_\gamma(\ov u), e_\gamma( \ov v) \Big) = \mu_\rho \Big( f(u), f(v) \Big) 
 %\end{align*}
 
-\item Let $L/k$ be a Galois extension, and let $K = L^{\alg} = k^{\alg}$ be the algebraic closure. Fix an embedding $L \into K$. Let $\sig \in \Gal(L/k)$, and let $\rho:\SL_n(L) \to \GL_n(K)$ be the composition of inclusion and entrywise application of $\sig$. Then again $A = V = U$, though technically $U = e_{13}(L) \subseteq \SL_n(L)$, and $A = V = e_{13}(L) \subseteq \GL_n(K)$. As abelian groups, $(L, +) \iso (A, \cdot)$. Lemma \ref{multiplicative} says
+\item Let $k$ be any field, let $k^{\alg}$ be the algebraic closure, and fix an embedding $k \into k^{\alg}.$ Let $\sig:k \to k$ be a field automorphism. Let $\rho:\SL_n(k) \to \GL_n(K)$ be the composition of inclusion and entrywise application of $\sig$. Then again $A = V = U$, though technically $U = e_{13}(L) \subseteq \SL_n(k)$, and $A = V = e_{13}(k) \subseteq \GL_n(K)$. As abelian groups, $(k, +) \iso (A, \cdot)$. Lemma \ref{multiplicative} says
 \[
 	\mu_\rho \Big( e_\gamma( \sig u), e_\gamma ( \sig v) \Big) = e_\gamma \Big( \sig(uv) \Big)
 \]
@@ -287,9 +287,41 @@ so the map
 \[
 	f:L \to A \qquad f(u) = e_\gamma( \sig u)
 \]
-gives a ring isomorphism $(L, +, \cdot) \iso (A, \cdot, \mu_\rho)$.
+gives a ring isomorphism $(k, +, \cdot) \iso (A, \cdot, \mu_\rho)$.
 
+\item Let $k$ be any field, let $k^{\alg}$ be the algebraic closure, and fix an embedding $k \into k^{\alg}$. Let $\tau:k^{\alg} \to k^{\alg}$ be a field automorphism. Let $\rho:\SL_n(k) \to \GL_n(K)$ be the composition of inclusion and entrywise application of $\sig$. Then
+\begin{align*}
+	U &= e_\gamma(k) \subseteq \SL_n(k) \\
+	V &= e_\gamma(\tau k) \subseteq \GL_n(K) \\
+	A &= V
+\end{align*}
+As above, $(k, +, \cdot) \iso (A, \cdot \mu_\rho)$ via the map $k \to A, u \mapsto e_\gamma(\tau u)$.
 \end{enumerate}
+\end{example}
+
+\begin{example}
+Let $G = \SL_n$ and let $T \subset G$ be the diagonal torus. Let $\Phi = \Phi(G, T)$ be the associated root system, of type $A_{n-1}$. Concretely,
+\begin{align*}
+	\Phi &= \lb \alpha_{ij} : 1 \le i \neq j \le n \rb 
+\end{align*}
+where $\alpha_{ij} = \alpha_i - \alpha_j$ and $\alpha_i:T \to k^\times$ is the character that picks off the $i$th diagonal entry. Let $\alpha, \beta \in \Phi$ such that $\alpha+\beta = \gamma \in \Phi$. That is, $\alpha = \alpha_{ij}$ and $\beta = \alpha_{j\ell}$ and $\gamma = \alpha_{i\ell}$ for some three distinct $i,j,\ell$. There are maps $e_\alpha, e_\beta, e_\gamma:k \to \SL_n(k)$ such that, for example,
+\[
+	e_\alpha(k) = \lb x \in \SL_n(k) : txt \inv = \alpha(t) x, \forall t \in T(k) \rb
+\]
+Because $\alpha + \beta = \gamma$, we have a commutator relation
+\[
+	\Big[ e_\alpha(u), e_\beta(v) \Big] = e_\gamma( \pm uv )
+\]
+If the sign is negative, just reverse the roles of $\alpha$ and $\beta$ so that the sign is positive, so we may assume that
+\[
+	\Big[ e_\alpha(u), e_\beta(v) \Big] = e_\gamma( uv )
+\]
+Also, there are ``Weyl group elements" $w_{\gamma \to \alpha}, w_{\gamma \to \beta} \in \SL_n(k)$ so that
+\begin{align*}
+	w_{\gamma \to \beta} \cdot e_\gamma(u) \cdot w_{\gamma \to \beta} \inv &= e_\beta(u) \\
+	w_{\gamma \to \alpha} \cdot e_\gamma(u) \cdot w_{\gamma \to \alpha} \inv &= e_\alpha(u)
+\end{align*}
+I put ``Weyl group elements" in quotation marks because techincally the Weyl group is the quotient $N_G(T)/ Z_G(T) = N_G(T)/T$, and so elements of the Weyl group are not in $G(k)$. The elements above are, literally speaking, elements of the normalizer $N_G(T)$, representing elements of the quotient which is the Weyl group.
 \end{example}
 
 \newpage
@@ -307,7 +339,7 @@ be a group homomorphism. Suppose we have functions $e_\alpha, e_\beta, e_\gamma:
 \]
 and suppose we have an element $h_\gamma \in G(k)$ such that
 \[
-	h_\gamma \cdot  e_\gamma \Big( N_{\alpha \beta}(u,v) \Big) \cdot h_\gamma \inv = uv
+	h_\gamma \cdot  e_\gamma \Big( N_{\alpha \beta}(u,v) \Big) \cdot h_\gamma \inv = e_\gamma( uv )
 \]
 and suppose we have elements $w_{\gamma \to \beta}, w_{\gamma \to \alpha} \in G(k)$ such that
 \begin{align*}
@@ -349,6 +381,85 @@ $A$ is a commutative unital algebraic ring under the two binary operations of ma
 \end{proposition}
 \begin{proof}
 Immediate from Lemma 3.2 from \textit{Linear representations of Chevalley groups over commutative rings}.
+\end{proof}
+
+\begin{example}
+Split special orthogonal group, where $h$ is needed \incomplete
+\end{example}
+
+\begin{example}
+Quasi-split special unitary group, where $h$ is needed \incomplete
+\end{example}
+
+\noi In the following definition, an algebraic $k$-group is a functor from the category of $k$-algebras to the category of groups. So if $G$ is an algebraic $k$-group, then $G$ is not literally a group, but $G(k)$ is a group, called the group of $k$-rational points. A morphism of algebraic groups is a natural transformation $G \to H$, which comes with literal group homomorphisms $G(R) \to H(R)$ for every $k$-algebra $R$.
+
+\begin{definition}
+\label{isotropic group}
+Let $G$ be an isotropic\footnote{Isotropic just means it contains a torus of some positive dimension.} reductive algebraic $k$-group, and let $\frakg$ be the Lie algebra of $G$. Let $S \subseteq G$ be a maximal\footnote{$S$ is maximal among $k$-split tori, not necessarily maximal among all tori} $k$-split torus. A \tbf{character} of $S$ is a morphism of algebraic groups $S \to \G_m$. The set of characters is denoted $X(S)$. For $\alpha \in X(S)$, let
+\[
+	\frakg_\alpha(k) = \lb X \in \frakg(k) : s \cdot X = \alpha(s) X, \forall s \in S(k) \rb
+\]
+For every $\alpha \in X(S)$, $\frakg_\alpha(k)$ is a Lie subalgebra of $\frakg(k)$. If $k$ is algebraically closed and characteristic zero, then $\dim(\frakg_\alpha(k))$ is always zero or one, but for an arbitrary field $k$ it may have larger dimension. Let
+\begin{align*}
+	d_\alpha &= \dim_k(\frakg_\alpha(k)) \\
+	V_\alpha &= (\G_a)^{d_\alpha}
+\end{align*}
+We may think of $V_\alpha(k)$ as a $k$-vector space with dimension $d_\alpha$. In fact, as a vector space, $V_\alpha(k) \iso \frakg_\alpha(k)$, though we do not think of $V_\alpha(k)$ as being a subset of the Lie algebra $\frakg(k)$ or having any kind of Lie algebra structure. When $k$ is algebraically closed and characteristic zero, $V_\alpha$ is just $\lb 0 \rb$ or $k$, but in general it may have larger dimension. 
+
+ The \tbf{relative root system of $G$ with respect to $S$} is
+\[
+	\Phi = \Phi(G,S) = \lb \alpha \in X(S) : \frakg_\alpha(k) \neq 0 \rb = \lb \alpha \in X(S) : d_\alpha > 0 \rb
+\]
+The \tbf{Weyl group} of $(G,S)$ is $W = N_G(S) / Z_G(S) = N_G(S) / S$. Usually, the functorial perspective on $W$ is unnecessary and we just care about the group of $k$-points, $W(k) = N_{G(k)} (S(k)) / S(k)$. Actually, most of the time we only care about the groups of $k$-points of all of this stuff.
+\end{definition}
+
+\begin{definition}
+Let $\Phi$ be a (possibly non-reduced) root system. For $\alpha, \beta \in \Phi$, let
+\[
+	(\alpha, \beta) = \lb i\alpha + j\beta \in \Phi : i,j \in \Z_{\ge 1} \rb
+\]
+\end{definition}
+
+\begin{lemma}
+\label{commutator}
+Let $G, k\footnote{Probably need to assume $k$ is characteristic zero, or at least not characteristic 2 or 3.}, S, \Phi$ be as in Definition \ref{isotropic group}.  Let $\alpha, \beta \in \Phi$ so that $\gamma = \alpha + \beta \in \Phi$ and $\alpha, \beta$ are not proportional\footnote{A relative root system may not be reduced, and we do not want $\alpha = \beta$ even though $2\alpha$ may be a root.}. There exist
+\begin{itemize}
+	\item Maps $e_\alpha:V_\alpha(k) \to G(k)$ aned $e_\beta:V_\beta(k) \to G(k)$
+	\item For each element of $(\alpha, \beta)$ a function $e_{i\alpha+j\beta}:k \to G(k)$
+	\item For each element of $(\alpha, \beta)$ a function\footnote{$N_{ij}^{\alpha \beta}$ should be homogeneous of degree $i$ in the first input and homogeneous of degree $j$ in the second input, but I am not sure if this is actually needed in any way for the construction.} $N_{ij}^{\alpha \beta}:V_\alpha(k) \times V_\beta(k) \to V_{i\alpha+j\beta}(k)$
+\end{itemize}
+such that for all $u \in V_\alpha(k)$ and $v \in V_\beta(k)$ we have
+\begin{align*}
+	\Big[ e_\alpha(u), e_\beta(v) \Big] &= \prod_{(\alpha,\beta)} e_{i\alpha + j\beta} \Big( N_{ij}^{\alpha \beta}(u,v) \Big)
+\end{align*}
+\end{lemma}
+\begin{proof}
+\incomplete
+\end{proof}
+
+\begin{lemma}
+Let $G, k, S, \Phi$ be as in Definition \ref{isotropic group}. Let $\alpha, \gamma \in \Phi$ be roots of the same length. There exist 
+\begin{itemize}
+	\item An element\footnote{The element $w_{\gamma \to \alpha}$ should be in $N_{G(k)}(S(k))$ and satisfy $w^2 = 1$, but I am not sure if this is necessary to the calculation.} $w_{\gamma \to \alpha} \in G(k)$
+	\item A function\footnote{I am pretty sure $\varphi_{\gamma \to \alpha}$ should be an isomorphism of vector spaces.} $\varphi_{\gamma \to \alpha}:V_\gamma(k) \to V_\alpha(k)$
+\end{itemize}
+such that for all $u \in V_\alpha(k)$ we have
+\begin{align*}
+	w_{\gamma \to \alpha} \cdot e_\gamma(u) \cdot w_{\gamma \to \alpha} \inv = e_\alpha \Big( \varphi_{\gamma \to \alpha}(u) \Big)
+\end{align*}
+\end{lemma}
+\begin{proof}
+\incomplete
+\end{proof}
+
+\begin{lemma}
+Let $G, k, S, \Phi$ be as in Definition \ref{isotropic group}. Let $\alpha, \beta \in \Phi$ so that $\gamma = \alpha + \beta \in \Phi$ and $\alpha, \beta$ are not proportional, and let $N_{ij}^{\alpha \beta}$ be the function from Lemma \ref{commutator}. For every $u \in V_\alpha(k)$ and $v \in V_\beta(k)$, there exists an element $h \in G(k)$ such that
+\[
+	h_\gamma(u,v) \cdot \Bigg( \prod_{(\alpha,\beta)} e_{i\alpha+j\beta} \big(N_{ij}^{\alpha \beta}(u,v) \big) \Bigg) \cdot h_\gamma(u,v) \inv = \incomplete
+\]
+\end{lemma}
+\begin{proof}
+I'm not even sure what the right hand side of the equation above is supposed to be  \incomplete
 \end{proof}
 
 \end{document}
