Starting work again

--- a/Development roadmap.tex
+++ b/Development roadmap.tex
@@ -82,7 +82,7 @@
 
 	\item Complete group builder functions for special unitary groups.
 	\begin{itemize}
-		\item Write various internal methods for build\_special\_unitary\_group
+		\item \sout{Write various internal methods for build\_special\_unitary\_group}
 
 		\sout{is\_lie\_algebra\_element\_SU}
 		
@@ -92,9 +92,9 @@
 		
 		\sout{root\_space\_dimension\_SU}
 		
-		root\_space\_map\_SU
+		\sout{root\_space\_map\_SU}
 		
-		root\_subgroup\_map\_SU
+		\sout{root\_subgroup\_map\_SU}
 		
 		\sout{torus\_element\_map\_SU}
 
