Finished generic Lie algebra elements

--- a/Roadmap.tex
+++ b/Roadmap.tex
@@ -1,10 +1,5 @@
 \documentclass[12pt]{article}
 \pagestyle{plain}
-%\topmargin=-0.5in
-%\textheight=9in
-%\evensidemargin=-1.5in
-%\oddsidemargin=0in
-%\setlength{\textwidth}{6.5in}
 \usepackage[top=2cm, bottom=2cm, left=1.4cm, right=1.4cm]{geometry}
 
 \usepackage{graphicx}
@@ -86,7 +81,7 @@ Automate extraction of roots from the torus conjugation on the Lie algebra. Prob
 
 \bigskip
 
-Last updated: Dec 17, 2025
+Last updated: Dec 19, 2025
 \end{center}
 \vfill
 
@@ -108,7 +103,7 @@ The goal of this project is to have a self-contained and comprehensive set of to
 In order to facilitate the above tasks, particularly those related to root systems, it will also be necessary to have a class to model root systems (or perhaps root data), and perform certain calculations such as enumerating summable pairs of roots.
 
 \newpage
-\section{Documentation of code}
+\section{Code documentation}
 
 \subsection{Root system class}
 
